update the readme documents and the presenter guide along with the demo prerequisites